Bug 1159872 - Make IAccessible2::Get_States once again return S_OK when it detects a defunct accessible. r=surkov CLOSED TREE

--HG--
extra : rebase_source : 9071ac95f0a4ffd75b77a485223f843eba1155d5
extra : histedit_source : 34e050128803d0edd45e2359c45cf90c097f6b60