accessible/windows/ia2/ia2Accessible.cpp
@@ -354,7 +354,7 @@ ia2Accessible::get_states(AccessibleStates* aStates)
   AccessibleWrap* acc = static_cast<AccessibleWrap*>(this);
   if (acc->IsDefunct()) {
     *aStates = IA2_STATE_DEFUNCT;
-    return CO_E_OBJNOTCONNECTED;
+    return S_OK;
   }
 
   uint64_t state;
